--- a/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
@@ -53,8 +53,8 @@
                 <div class="table-responsive">
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
                         <div class="row">
-                            <div class="col-sm-12 col-md-6">
 
+                            <div class="col-sm-12 col-md-6">
                                 <form action="/Admin/Contracts/" method="get" id="pagesize">
                                     <div class="dataTables_length" id="dataTable_length">
                                         <label>
@@ -144,7 +144,7 @@
                                             <div class="form-group mr-3">
                                                 <select class="form-control mr-2" id="select-action">
                                                     <option value="6">--Chọn thao tác--</option>
-                                                    <option value="0">Action</option>
+                                                    <option value="0">Confirmed</option>
                                                     <option value="-1">Deleted</option>
                                                 </select>
                                             </div>
