--- a/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
@@ -34,24 +34,29 @@
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
 
                         <div class="row">
-                            <div class="col-sm-12 col-md-6">
 
+                            <div class="col-sm-12 col-md-6">
                                 <form action="/Admin/Programmes/" method="get" id="pagesize">
                                     <div class="dataTables_length" id="dataTable_length">
                                         <label>
-                                            Show   @Html.DropDownList("pageSize", null, new { @class = "custom-select custom-select-sm form-control form-control-sm" }) entries
+                                            Show
+                                            @Html.DropDownList("pageSize", null, new { @class = "custom-select custom-select-sm form-control form-control-sm" })
+                                            entries
                                         </label>
                                     </div>
                                 </form>
                             </div>
+
                             <div class="col-sm-12 col-md-6">
                                 <form action="/Admin/Programmes/" method="get">
                                     <div id="dataTable_filter" class="dataTables_filter">
                                         <label>Search:<input type="text" id="SearchString" name="SearchString" class="form-control form-control-sm" placeholder="" aria-controls="dataTable" value="" onkeypress="handle(event)"></label>
-                                    </div>*@
+                                    </div>
                                 </form>
                             </div>
-                        </div><div class="row">
+
+                        </div>
+                        <div class="row">
                             <div class="col-3 mt-2">
                                 <div class="form-group mr-3">
                                     <select class="form-control mr-2" id="select-action">
@@ -167,7 +172,8 @@
                             if (!res == false) {
                                 window.location.reload();
                             }
-                        });
+                        },
+                    });
                     if (selectedIDs.length <= 0) {
                         alert('You have not selected programme !');
                         return;
@@ -189,18 +195,21 @@
                             alert('error');
                         }
                     });
-                })
+                };
+            });
         })
+
         function handle(e) {
             if (e.keyCode === 13) {
                 e.preventDefault();
             }
+        };
 
-            $(function () {
-                $("#pageSize").change(function () {
-                    $("#pagesize").submit();
-                });
+        $(function () {
+            $("#pageSize").change(function () {
+                $("#pagesize").submit();
             });
+        });
     </script>
 }
 
