--- a/Project_sem_3/Views/Home/MedicalInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MedicalInsurance.cshtml
@@ -81,10 +81,10 @@
                     <div style="width: 100%;">
                         <h2>Benefits when buying BIC Tam An Insurance</h2>
                         <ul>
-                            <li>Pay up <strong>to 1 billion VND </strong> for accident cases;</li>
-                            <li>Pay up<strong>to 2.5 million VND / 1 </strong> outpatient visit and treatment;</li>
-                            <li>Pay up <strong>to 9 million VND / day </strong> inpatient treatment;</li>
-                            <li>Pay up<strong>to VND 180 million per</strong>surgery;</li>
+                            <li>Pay up <strong>to 1 billion $ </strong> for accident cases;</li>
+                            <li>Pay up <strong>to 2.5 million $ / 1 </strong> outpatient visit and treatment;</li>
+                            <li>Pay up <strong>to 9 million $ / day </strong> inpatient treatment;</li>
+                            <li>Pay up <strong>to  180 million $/ </strong>persurgery;</li>
                             <li>No medical examination is required prior to purchase;</li>
                             <li>Guarantee of hospital fees at major hospitals / clinics nationwide;</li>
                             <li>Compensation procedure is simple and fast.</li>
