--- a/Project_sem_3/Views/Home/MotorInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MotorInsurance.cshtml
@@ -40,7 +40,7 @@
                     <p>BIC will compensate the third party for damage to life and property on behalf of the vehicle owner, the damage to the passengers to the maximum extent as follows: </p>
                     <ul>
                         <li>
-                            Regarding people: maximum 100.000.000 đ  / person / accident. Specifically:
+                            Regarding people: maximum $60 / person / accident. Specifically:
                         </li>
                     </ul>
                     <table class="table-bordered" border="0" cellpadding="5" cellspacing="0" style="width:80%;">
@@ -52,7 +52,7 @@
                             <td>
                                 Die by accident
                             </td>
-                            <td class="">Pay full 100.000.000đ / person / case</td>
+                            <td class="">Pay full $10 / person / case</td>
                         </tr>
                         <tr class="">
                             <td>
@@ -62,7 +62,7 @@
                         </tr>
                     </table>
                     <ul>
-                        <li>Regarding assets: maximum of 50.000.000đ / accident.</li>
+                        <li>Regarding assets: maximum of $50 / accident.</li>
                     </ul>
 
                     <h2 class="text-primary">Insurance fees:</h2>
@@ -77,14 +77,14 @@
                         </tr>
                         <tr>
                             <td>Civil liability insurance</td>
-                            <td><div align="right">66.000 VNĐ</div></td>
+                            <td><div align="center"> $66</div></td>
                         </tr>
                         <tr>
                             <td>Civil liability insurance + Accident insurance for 2 people in the car (VND 10 million / person)</td>
-                            <td><div align="right">86.000 VNĐ</div></td>
+                            <td><div align="center">$86</div></td>
                         </tr>
                     </table>
-                    <h2 class="text-primary">Download documents and forms:</h2>
+                    <h2 class="text-primary"style="margin-top:25px">Download documents and forms:</h2>
                     <ul>
                         <li><a href="BsioData/document.pdf" class="normal" target="_blank" style="color:#5548C7">Circular 22/2016 / TT-BTC of the Ministry of Finance </a> Stipulating rules, terms, fee schedule and compulsory liability of civil liability of motor vehicle owners.</li>
 
