--- a/Project_sem_3/Areas/Admin/Views/Insurances/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Insurances/Index.cshtml
@@ -45,7 +45,7 @@
                             <div class="col-sm-12 col-md-6">
                                 <form action="/Admin/Insurances/" method="get">
                                     <div id="dataTable_filter" class="dataTables_filter">
-                                        <label>Search:<input type="text" id="SearchString" name="SearchString" class="form-control form-control-sm" placeholder="" aria-controls="dataTable" value="" onkeypress="handle(event)"></label>
+                                        <label>Search:<input type="text" id="SearchString" name="SearchString" class="form-control form-control-sm" placeholder="" aria-controls="dataTable" value="" onkeypress="handle(e)"></label>
                                     </div>
                                 </form>
                             </div>
@@ -86,7 +86,7 @@
                                                 </td>
                                                 <td>@item.CreatedAt.ToString("dd-MM-yyyy")</td>
 
-                                                <td>    
+                                                <td>
                                                     <div class="btn-group">
                                                         <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
                                                         <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
