--- a/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
@@ -50,7 +50,7 @@
                             <div class="col-sm-12 col-md-6">
                                 <form action="/Admin/Programmes/" method="get">
                                     <div id="dataTable_filter" class="dataTables_filter">
-                                        <label>Search:<input type="text" id="SearchString" name="SearchString" class="form-control form-control-sm" placeholder="" aria-controls="dataTable" value="" onkeypress="handle(event)"></label>
+                                        <label>Search:<input type="text" id="SearchString" name="SearchString" class="form-control form-control-sm" placeholder="" aria-controls="dataTable" value="" onkeypress="handle(e)"></label>
                                     </div>
                                 </form>
                             </div>
@@ -93,13 +93,13 @@
                                                 </td>
                                                 <td>$@item.Price</td>
 
-                                                <td>         
+                                                <td>
                                                     <div class="btn-group">
                                                         <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
                                                         <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
                                                         <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
                                                     </div>
-                                                    
+
                                                 </td>
                                             </tr>
                                         }
