--- a/Project_sem_3/Areas/Admin/Views/Insurances/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Insurances/Index.cshtml
@@ -51,7 +51,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            @*<div class="col-3 mt-2">
+                            <div class="col-3 mt-2">
                                     <div class="form-group mr-3">
                                         <select class="form-control mr-2" id="select-action">
                                             <option value="6">--Chọn thao tác--</option>
@@ -61,8 +61,8 @@
                                     </div>
                                 </div>
                                 <div class="col-9">
-                                    <button type="button" id="action_contract">Xác nhận</button>
-                                </div>*@
+                                    <button type="button" class="btn btn-success" id="action_contract" style="margin-top: 8px;">Xác nhận</button>
+                                </div>
                             <div class="col-sm-12">
                                 <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
                                     <thead>
@@ -97,22 +97,7 @@
                                         }
                                     </tbody>
                                 </table>
-                                <div class="card-footer">
-                                    <div class="row mt-3">
-                                        <div class="col-3 mt-2">
-                                            <div class="form-group mr-3">
-                                                <select class="form-control mr-2" id="select-action">
-                                                    <option value="6">--Chọn thao tác--</option>
-                                                    <option value="0">Action</option>
-                                                    <option value="-1">Deleted</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="col-9" style="margin-top: 8px;">
-                                            <button type="button" id="action_contract" class="btn btn-success">Confirm</button>
-                                        </div>
-                                    </div>
-                                </div>
+                                
                             </div>
                         </div>
                         <div class="row">
@@ -138,22 +123,22 @@
 @section Scripts{
     @Scripts.Render("~/bundles/jqueryval")
     <script type="text/javascript">
-        $(document).ready(function () {
+        $(document).ready(function() {
             var selectedIDs = new Array();
-            $('#checkAll').click(function () {
+            $('#checkAll').click(function() {
                 $(".check").prop('checked',
                     $(this).prop('checked'));
             })
 
 
-            $('#action_contract').click(function () {
+            $('#action_contract').click(function() {
                 var selectedIDs = new Array();
                 var action = $('#select-action').val();
                 if (action == 6) {
                     alert('Please select the action you want to perform!');
                     return;
                 }
-                $('input:checkbox.check').each(function () {
+                $('input:checkbox.check').each(function() {
                     if ($(this).prop('checked')) {
                         var r = confirm("Do you want to delete?");
                         if (r == true) {
@@ -165,27 +150,28 @@
                     alert('ban chua chon insurance');
                     return;
 
-                    $.ajax({
-                        url: "/Admin/Insurances/DeleteAll",
-                        type: "POST",
-                        dataType: "json",
-                        data: {
-                            __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
-                            selectedIDs,
-                            action
-                        },
-                        success: function (res) {
-                            if (!res == false) {
-                                window.location.reload();
-                            }
-                        },
-                        error: function () {
-                            alert('error');
-                        }
-                    });
                 };
+                $.ajax({
+                    url: "/Admin/Insurances/DeleteAll",
+                    type: "POST",
+                    dataType: "json",
+                    data: {
+                        __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
+                        selectedIDs,
+                        action
+                    },
+                    success: function(res) {
+                        if (!res == false) {
+                            window.location.reload();
+                        }
+                    },
+                    error: function() {
+                        alert('error');
+                    }
+                });
             });
-        })
+        });
+    
         function handle(e) {
             if (e.keyCode === 13) {
                 e.preventDefault();
