createcontract chua hoan thien

--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
@@ -90,7 +90,7 @@
 
                                     <tbody>
 
-                                        @foreach (var item in Model)
+                                        @*@foreach (var item in Model)
                                         {
 
                                             <tr role="row" class="odd">
@@ -105,7 +105,7 @@
                                                 <td>@item.Description</td>
                                                 <td>@item.Price$</td>
                                                 <td>@item.DurationContract year</td>
-                                                <td>@item.DurationPay $/year</td>
+                                                <td>@item.DurationPay $/year</td>*@
                                                 @*<td>@item.CreatedAt</td>
                                                 <td>
                                                     <div class="btn-group">
