--- a/Project_sem_3/Views/MotorInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MotorInsurance/Order.cshtml
@@ -131,7 +131,7 @@
                                                                 <div _ngcontent-c5="" class="col-xs-4">
                                                                     <p _ngcontent-c5="" class="item-name">
                                                                         <span _ngcontent-c5="">
-                                                                            To be paid
+                                                                            Description
                                                                         </span>
                                                                     </p>
                                                                 </div>
