--- a/Project_sem_3/Views/HomeInsurance/Order.cshtml
+++ b/Project_sem_3/Views/HomeInsurance/Order.cshtml
@@ -58,7 +58,7 @@
                                                                     <div _ngcontent-c5="" class="col-xs-4">
                                                                         <p _ngcontent-c5="" class="item-name">
                                                                             <span _ngcontent-c5="">
-                                                                                To be paid
+                                                                                Description
                                                                             </span>
                                                                         </p>
                                                                     </div>
