--- a/Project_sem_3/Views/Home/About.cshtml
+++ b/Project_sem_3/Views/Home/About.cshtml
@@ -61,7 +61,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="team">
                             @*<figure class="team-image"><img src="~/Content/dummy/team-1.jpg" alt=""></figure>*@
-                            <figure class="team-image"><img src="https://i.pinimg.com/474x/11/ff/54/11ff548db34a41d55c0215fa6a99445a.jpg" alt=""></figure>
+                            <figure class="team-image"><img src="~/Content/dummy/About_1.jpg" alt=""></figure>
                             <h2 class="team-name">Jessica Brown</h2>
                             <small class="team-title">CEO</small>
                             <div class="social-links">
@@ -74,7 +74,7 @@
                     </div> <!-- .col-md-3 -->
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="team">
-                            <figure class="team-image"><img src="https://i.mydramalist.com/Xr5Yxc.jpg" alt=""></figure>
+                            <figure class="team-image"><img src="~/Content/dummy/About_3 (2).jpg" alt=""></figure>
                             @*<figure class="team-image"><img src="~/Content/dummy/team-2.jpg" alt=""></figure>*@
                             <h2 class="team-name">Jeremy Stuart</h2>
                             <small class="team-title">Managing Director</small>
@@ -89,7 +89,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="team">
                             @*<figure class="team-image"><img src="~/Content/dummy/team-3.jpg" alt=""></figure>*@
-                            <figure class="team-image"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/AmberHeardTIFFSept10.jpg/250px-AmberHeardTIFFSept10.jpg" alt=""></figure>
+                            <figure class="team-image"><img src="~/Content/dummy/About_3.jpg" alt=""></figure>
                             <h2 class="team-name">Sarah Johnson</h2>
                             <small class="team-title">Public Relation</small>
                             <div class="social-links">
@@ -103,7 +103,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="team">
                             @*<figure class="team-image"><img src="~/Content/dummy/team-4.jpg" alt=""></figure>*@
-                            <figure class="team-image"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Park_Seo-joon_at_%22The_Chronicles_of_Evil%22_stage_greeting_in_Busan%2C_23_May_2015_04.jpg" alt=""></figure>
+                            <figure class="team-image"><img src="~/Content/dummy/About_4.jpg" alt=""></figure>
                             <h2 class="team-name">Paul ferguson</h2>
                             <small class="team-title">Consultant</small>
                             <div class="social-links">
