--- a/Project_sem_3/Views/Home/HouseInsurance.cshtml
+++ b/Project_sem_3/Views/Home/HouseInsurance.cshtml
@@ -527,7 +527,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url(https://www.revenuegy.org/wp-content/uploads/2019/04/home-insurance-700x480.jpeg);
+        background-image: url("https://www.boshers.co.uk/wp-content/uploads/2017/09/bigstock-197233384.jpg");
         background-position: center center;
         background-size: cover;
     }
