--- a/Project_sem_3/Views/Home/MedicalInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MedicalInsurance.cshtml
@@ -183,7 +183,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url(https://www.nextrongroup.com/upload/images/Push%20Pull%20Circular%20Connectors%20Application%20for%20Medical%20connector%20.jpg);
+        background-image: url("/Content/dummy/Medical_1.jpg");
         background-position: center center;
         background-size: cover;
     }
