--- a/Project_sem_3/Views/Home/lifeInsurance.cshtml
+++ b/Project_sem_3/Views/Home/lifeInsurance.cshtml
@@ -126,7 +126,7 @@
         </div>
     </div>
 </div>
-</div>
+
 
 
 <style>
@@ -239,7 +239,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url(https://yesouisispace.com/wp-content/uploads/2018/02/7-Things-You-Need-to-Know-About-Life-Insurance.png);
+        background-image: url(https://www.wishpolicy.com/wp-content/uploads/2019/11/Life-insurance.jpg);
         background-position: center center;
         background-size: cover;
     }
