--- a/Project_sem_3/Views/Shared/_Layout.cshtml
+++ b/Project_sem_3/Views/Shared/_Layout.cshtml
@@ -27,8 +27,13 @@
     <style>
         .no-bullet li {
             margin-bottom: 6px
-            
         }
+        .main-navigation .menu li {
+         display: inline-block;
+         font-size:20px
+        }
+            
+        
         .menu-item{
             margin:0
         }
@@ -368,7 +373,7 @@
                             <div class="widget">
                                 <h3 class="widget-title">Products</h3>
                                 <ul class="no-bullet">
-                                    <li><a href="#">Life insurance</a></li>
+                                    <li><a href="#">insurance</a></li>
                                     <li><a href="#">Home insurance</a></li>
                                     <li><a href="#">Car insurance</a></li>
                                     <li><a href="#">Business insurance</a></li>
@@ -421,8 +426,10 @@
                     <nav class="footer-navigation">
                         <a href="#">Home</a>
                         <a href="#">About us</a>
-                        <a href="#">Insurance plans</a>
-                        <a href="#">Resources</a>
+                        <a href="#">Medical</a>
+                        <a href="#">House</a>
+                        <a href="#">Motor</a>
+                        <a href="#">Life</a>
                         <a href="#">Contact</a>
                     </nav>
 
