--- a/Project_sem_3/Views/Home/Index.cshtml
+++ b/Project_sem_3/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="hero hero-slider">
     <ul class="slides">
         @*<li data-bg-image="/Content/dummy/slide-1.jpg">*@
-        <li style="width:100px" data-bg-image="https://policygurug.com/html/image/top-seven-tips-for-choosing-home-insurance.jpg">
+        <li style="width:100px" data-bg-image="/Content/dummy/Index.jpg">
             <div class="container">
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
@@ -17,7 +17,7 @@
         </li>
 
         @*<li data-bg-image="/Content/dummy/slide-2.jpg">*@
-        <li data-bg-image="https://life-insurance-01.com/wp-content/uploads/2019/11/life-insurance.jpg">
+        <li data-bg-image="/Content/dummy/Index_2.jpg">
             <div class="container">
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
@@ -27,7 +27,7 @@
             </div>
         </li>
         @*<li data-bg-image="/Content/dummy/slide-3.jpg">*@
-        <li data-bg-image="https://i.pinimg.com/736x/83/e8/f8/83e8f82bc5bbf396d84c707f294f64a3.jpg">
+        <li data-bg-image="/Content/dummy/Index_3.jpg">
             <div class="container">
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
@@ -37,7 +37,7 @@
             </div>
         </li>
 
-        <li data-bg-image="https://www.businessfinancial.net/wp-content/uploads/2018/09/17.jpg">
+        <li data-bg-image="https://img.freepik.com/free-photo/hand-chooses-emoticon-icons-healthcare-medical-symbol-wooden-block-healthcare-medical-insurance-concept_39665-204.jpg?size=626&ext=jpg">
             <div class="container">
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
@@ -103,7 +103,7 @@
                     <div class="offer caption-top">
                         @*<img src="~/Content/dummy/offer-tall.jpg" alt="offer 1">*@
                         @*<img src="https://m.economictimes.com/thumb/msid-71123310,width-270,height-576,resizemode-4,imgsize-170526/insurance-pi.jpg">*@
-                        <img src="https://m.economictimes.com/thumb/msid-69278711,width-270,height-576,resizemode-4,imgsize-132321/home-insurance-getty.jpg">
+                        <img src="/Content/dummy/Index_5.1.jpg">
 
                         <div class="caption">
                             <h3 class="offer-title">Insurance</h3>
@@ -116,7 +116,7 @@
                         <div class="col-md-4">
                             <div class="offer caption-bottom">
                                 @*<img src="~/Content/dummy/offer-1.jpg" alt="offer 2">*@
-                                <img style="width:276px;height:270px" src="https://www.aegonlife.com/insurance-investment-knowledge/wp-content/uploads/2019/12/13-1.jpg" alt="offer 2">
+                                <img style="width:276px;height:270px" src="/Content/dummy/Index_5.2.jpg" alt="offer 2">
                                 <div class="caption">
                                     <h3 class="offer-title">Life Insurance</h3>
                                     <small>Conubia nostra per inceptos</small>
@@ -126,7 +126,7 @@
                         <div class="col-md-8">
                             <div class="offer caption-bottom">
                                 @*<img src="~/Content/dummy/offer-wide.jpg" alt="offer 3">*@
-                                <img style="width:570px;height:270px" src="https://www.biospectrumasia.com/uploads/articles/1-12856.jpg" alt="offer 3">
+                                <img style="width:570px;height:270px" src="/Content/dummy/Index_5.3.jpg" alt="offer 3">
                                 <div class="caption">
                                     <h3 class="offer-title">Medical Insurance </h3>
                                     <small>Conubia nostra per inceptos</small>
@@ -138,7 +138,7 @@
                         <div class="col-md-8">
                             <div class="offer caption-bottom">
                                 @*<img src="~/Content/dummy/offer-2.jpg" alt="offer 2">*@
-                                <img style="width:570px;height:260px" src="https://www.uob.com.vn/iwov-resources/images/promotion-detail/home-insurance/home-insurance-472x332.jpg" alt="offer 2">
+                                <img style="width:570px;height:260px" src="/Content/dummy/Index_5.4.jpg" alt="offer 2">
                                 <div class="caption">
                                     <h3 class="offer-title">Home Insurance</h3>
                                     <small>Conubia nostra per inceptos</small>
@@ -157,7 +157,7 @@
                         <div class="col-md-4">
                             <div class="offer caption-bottom">
                                 @*<img src="~/Content/dummy/offer-4.jpg" alt="offer 2">*@
-                                <img style="width:570px;height:260px" src="https://5.imimg.com/data5/GA/HD/OM/SELLER-47367122/motorcycle-insurance-service-500x500.jpg">
+                                <img style="width:570px;height:260px" src="/Content/dummy/Index_5.5.jpg">
                                 <div class="caption">
                                     <h3 class="offer-title">Motorbike Insurance</h3>
                                     <small>Conubia nostra per inceptos</small>
@@ -179,7 +179,7 @@
                 <div class="col-md-3">
                     <div class="news">
                         @*<figure><img src="~/Content/dummy/featured-image-1.jpg" alt=""></figure>*@
-                        <figure><img src="https://www.uob.com.vn/iwov-resources/images/promotion-detail/home-insurance/home-insurance-472x332.jpg" alt=""></figure>
+                        <figure><img style="height:184px" src="~/Content/dummy/Index_6.1.1.jpg" alt=""></figure>
 
                         <div class="date"><img src="~/Content/images/icon-calendar.png" alt="">03/09/2014</div>
                         <h2 class="entry-title"><a href="#">There is a multitude of different types of insurance</a></h2>
@@ -189,7 +189,7 @@
                     <div class="news">
                         @*<figure><img src="~/Content/dummy/featured-image-2.jpg" alt=""></figure>*@
 
-                        <figure><img style="height:184px" src="https://s.yimg.com/ny/api/res/1.2/JiFuWC.hXaGWRDJYm207zA--~A/YXBwaWQ9aGlnaGxhbmRlcjtzbT0xO3c9NzI4O2g9NDAw/https://media.zenfs.com/en-US/smartasset_475/b0e311a3ac7e45403c22e1848f1a072d" alt=""></figure>
+                        <figure><img style="height:184px" src="~/Content/dummy/Index_6.1.2.jpg" alt=""></figure>
                         <div class="date"><img src="~/Content/images/icon-calendar.png" alt="">03/09/2014</div>
                         <h2 class="entry-title"><a href="#">There is a multitude of different types of insurance</a></h2>
                     </div>
@@ -198,7 +198,7 @@
                     <div class="news">
                         <figure>
                             @*<img src="~/Content/dummy/featured-image-3.jpg" alt=""></figure>*@
-                            <img style="height:184px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQh6eSyU-NdR7g5PiihqZcg5Ap7YeLcw_pai3Gfs2yans2i5chN" alt="">
+                            <img style="height:184px" src="~/Content/dummy/Index_6.1.3.jpg" alt="">
                         </figure>
                         <div class="date"><img src="~/Content/images/icon-calendar.png" alt="">03/09/2014</div>
                         <h2 class="entry-title"><a href="#">There is a multitude of different types of insurance</a></h2>
@@ -209,7 +209,7 @@
                     <div class="news">
                         <figure>
                             @*<img src="~/Content/dummy/featured-image-3.jpg" alt=""></figure>*@
-                            <img style="height:184px" src="https://3.bp.blogspot.com/-tekXkvS7yk8/V_Ocg4GinSI/AAAAAAAAAIc/wa1y6Dq5kHQOgt9onfiu5-kLZ-lN6qRdwCLcB/s1600/policybazaar-two-wheeler-insurance-online.jpg" alt="">
+                            <img style="height:184px" src="~/Content/dummy/Index_6.1.4.jpg" alt="">
                         </figure>
                         <div class="date"><img src="~/Content/images/icon-calendar.png" alt="">03/09/2014</div>
                         <h2 class="entry-title"><a href="#">There is a multitude of different types of insurance</a></h2>
