--- a/Project_sem_3/Views/Home/MotorInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MotorInsurance.cshtml
@@ -174,7 +174,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url(https://seenbyyou.com/wp-content/uploads/2019/10/modern-motorbike-insurance-service-company-logo-vector-13496017-735x400.jpg);
+        background-image: url("/Content/dummy/motor_Insurance.jpg");
         background-position: center center;
         background-size: cover;
     }
