--- a/Project_sem_3/Views/LifeInsurance/Order.cshtml
+++ b/Project_sem_3/Views/LifeInsurance/Order.cshtml
@@ -37,11 +37,11 @@
                         <input type="text" name="name" class="form-control" id="Name" autocomplete="off" placeholder="Name">
                     </div>
                     @*<div class="form-group ">
-                        <label class="col-sm-2 col-form-label">Pull Name:</label>
-                        <div class="col-md-4">
-                        <input style="height:43px" type="password" class="form-control" id="exampleInputPullName" autocomplete="off" placeholder="Pull Name">
-                        </div>
-                        </div>*@
+        <label class="col-sm-2 col-form-label">Pull Name:</label>
+        <div class="col-md-4">
+        <input style="height:43px" type="password" class="form-control" id="exampleInputPullName" autocomplete="off" placeholder="Pull Name">
+        </div>
+        </div>*@
                     <div class="form-group col-md-6">
                         <label class="col-form-label">Email</label>
                         <input type="text" name="email" class="form-control" id="emails" placeholder="Email">
@@ -122,43 +122,72 @@
                         </select>
                     </div>
 
-                    <div class="form-group col-md-8">
+                    <div class="form-group col-md-7">
                         <label class="col-form-label">PhoneNumber</label>
                         <input type="password" class="form-control" id="exampleInputPhoneNumber" autocomplete="off" placeholder="PhoneNumber">
                     </div>
 
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-5">
                         <label class="col-form-label">Job</label>
-                        <input type="text" name="Job" class="form-control" id="job" autocomplete="off" placeholder="job">
+                        @*<input type="text" name="Job" class="form-control" id="job" autocomplete="off" placeholder="job">*@
+                        <select id="job" name="Job" required="" class="form-control form-control-long default ng-pristine ng-valid ng-touched">
+                            @*<option disabled="" value="">Nghề nghiệp</option>*@
+                            <option disabled="" selected="" value="">Job</option>
+                            <!---->
+                            <option value="1">Chủ doanh nghiệp</option>
+                            <option value="2">Nhân viên văn phòng</option>
+                            <option value="3">Kinh doanh cá thể</option>
+                            <option value="4">Nhân viên kinh doanh/ bán hàng</option>
+                            <option value="5">Giáo viên/ giảng viên</option>
+                            <option value="6">Bác sĩ/ nha sĩ/ dược sĩ</option>
+                            <option value="7">Kiến trúc sư/ họa viên kiến trúc</option>
+                            <option value="8">Kỹ sư xây dựng/ Kỹ sư trắc địa/ Kỹ sư hóa học</option>
+                            <option value="9">Nhân viên quản lý/ giám sát/ Quản đốc</option>
+                            <option value="10">Sinh viên</option>
+                            <option value="11">Hướng dẫn viên du lịch</option>
+                            <option value="12">Nhà báo/ Nhà văn/ Nhà thơ/ Phóng viên</option>
+                            <option value="13">Kỹ sư vận hành thiết bị/ giám sát thiết bị</option>
+                            <option value="14">Ca sĩ/ Nhạc sĩ/ Diễn viên/ Nhạc công/ Họa sĩ</option>
+                            <option value="15">Biên tập/ Dẫn chương trình/ Chủ nhiệm phim</option>
+                            <option value="16">Nhân viên chụp ảnh/ Nhân viên sửa máy ảnh</option>
+                            <option value="17">Kỹ sư giàn khoan </option>
+                            <option value="18">Đầu bếp</option>
+                            <option value="-1">Khác</option>
+
+                        </select>
                     </div>
-                    <div class="form-group col-md-8">
+                    <div class="form-group col-md-11">
                         <label class="col-form-label">Identity Card</label>
                         <input type="text" name="IdentityCard" class="form-control" id="identityCard" autocomplete="off" placeholder="IdentityCard">
                     </div>
+                    <div class="form-group col-md-12">
+                        <label class="col-form-label">Marital Status</label>
+                        <input type="text" name="MaritalStatus" class="form-control" id="marital" autocomplete="off" placeholder="MaritalStatus">
+                    </div>
 
                     @*<div style="margin-top:-20px" class="form-group ">
-                        <label class="col-sm-2 col-form-label">Password</label>
-                        <div class="col-md-4">
-                        <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        </div>
-                        <div style="margin-top:70px; overflow: hidden" class="form-group ">
-                        <label class="col-sm-2 col-form-label">Password</label>
-                        <div class="col-md-8">
-                        <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        </div>*@
+        <label class="col-sm-2 col-form-label">Password</label>
+        <div class="col-md-4">
+        <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        </div>
+        <div style="margin-top:70px; overflow: hidden" class="form-group ">
+        <label class="col-sm-2 col-form-label">Password</label>
+        <div class="col-md-8">
+        <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        </div>*@
                     @*<div class="form-group row">
-                        <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-                        <div class="col-md-4">
-                        <input type="password" class="form-control" id="inputPassword">
-                        </div>
-                        </div>*@
+        <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+        <div class="col-md-4">
+        <input type="password" class="form-control" id="inputPassword">
+        </div>
+        </div>*@
                     @*<div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>*@
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>*@
                 </div>
             </div>
 
@@ -182,8 +211,8 @@
 
                             <strong><label for="ctl18_Promotions1_lblHasToPayPremium" id="ctl18_Promotions1_lblHasToPayPremium">$0</label></strong>
                         </div>
-                        @*<input id="ctl18_lbtBook" style="text-decoration:none" type="submit" value="Order" class="btn-pro-buynow" href="/HouseInsurance/CreateContract" />*@
-                        <input type="submit" name="submit" value="submit" class="btn btn-success" />
+                        <input id="ctl18_lbtBook" style="text-decoration:none" type="submit" value="Order" class="btn-pro-buynow" href="/HouseInsurance/CreateContract" />
+                        @*<input type="submit" name="submit" value="submit" class="btn btn-success" />*@
                     </div>
                 </div>
             </div>
@@ -502,7 +531,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url(https://insurancequotes2day.com/wp-content/uploads/2017/05/life-insurance-for-seniors.jpg);
+        background-image: url("/Content/dummy/Life_Order.jpg");
         background-position: center center;
         background-size: cover;
     }
@@ -586,51 +615,23 @@
             $('#date_iden').datepicker()
 
             //Khi bàn phím được nhấn và thả ra thì sẽ chạy phương thức này
-            $("#formDemo").validate({
-                rules: {
-                    //Date_Iden: "required",
-                    //email: {
-                    //    required: true,
-                    //    email: true,
-                    //    //minlength: 10
-
-                    //},
-
-                    name: {
-                        required: true,
-                        minlength: 2
-                    },
-                    //phone: {
-                    //    required: true,
-                    //    minlength: 10
-                    //},
-                    //Job: "required",
-                    //IdentityCard: {
-                    //    required: true,
-                    //    minlength: 10
-                    //}
-
-                },
-                messages: {
-                    //Date_Iden: "Please enter date_iden ",
-                    //email: "Please enter a valid email address",
-                    ////email: "Vui lòng nhập email",
-                    name: {
-                        required: "Please enter a valid name",
-                        //minlength: "Địa chỉ ngắn vậy, chém gió ah?"
-                    },
-                    //PhoneNumber: {
-                    //    required: " Please enter a valid Phone Number",
-                    //    minlength: "Your phone is not correct",
-                    //},
-                    //IdentityCard: {
-                    //    required: " Please enter IdentityCard",
-                    //    minlength: "Your phone is not correct",
-                    //},
-
-                    //Job: "Please enter a valid job",
+             $("#formDemo").validate({
+            rules: {
+                //name: "required",
+               
+                name: {
+                    required: true,
+                    //minlength: 2
                 }
-            });
+            },
+            messages: {
+                //name: "Vui lòng nhập họ",
+                
+                name: {
+                    required: "Vui lòng nhập địa chỉ",
+                    minlength: "Địa chỉ ngắn vậy, chém gió ah?"
+                }
+            }
         });
 
     </script>
@@ -639,5 +640,8 @@
 
 
 
+
 }
+
+
 
