--- a/Project_sem_3/Areas/Admin/Views/Contracts/Deleted.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Contracts/Deleted.cshtml
@@ -98,7 +98,7 @@
                                                 <td class="sorting_1">
                                                     @item.Insurance.Name
                                                 </td>
-                                                <td>@item.ApplicationUserId</td>
+                                                <td>@item.ApplicationUser.UserName</td>
                                                 <td>@item.TotalPrice</td>
                                                 <td>@item.CreatedAt</td>
                                                 @*<td>@item.UpdatedAt</td>*@
