--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
@@ -99,7 +99,7 @@
 
                                     <tbody>
 
-                                        @*@foreach (var item in Model)
+                                       *@foreach (var item in Model)
                                         {
 
                                             <tr role="row" class="odd">
