--- a/Project_sem_3/Views/MedicalInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MedicalInsurance/Order.cshtml
@@ -1027,10 +1027,9 @@
                     //alert(price)
                 }
             });
-
         var objects = {
 
-            'item': []
+            'items': []
         };
         var prices = [];
         var emails = [];
@@ -1041,16 +1040,14 @@
         var programnemname = [];
         var address = [];
         function getdata() {
-     var insuranpackageId = $('input[name="insurancePackageId"]:checked').attr("class");
+            var insuranpackageId = $('input[name="insurancePackageId"]:checked').attr("class");
 
-             $.each($(".program-selecter option:selected"), function () {
+            $.each($(".program-selecter option:selected"), function () {
                 selectprogram.push($(this).val());
-                 var unitprice = parseInt($(this).attr("class")) + parseInt(insuranpackageId)
-                 prices.push(unitprice);
-                  programnemname.push($(this).text());
+                var unitprice = parseInt($(this).attr("class")) + parseInt(insuranpackageId)
+                prices.push(unitprice);
+                programnemname.push($(this).text());
             });
-           
-          
 
             $(".Email").each(function () {
                 emails.push($(this).val());
@@ -1070,13 +1067,14 @@
             $(".dateofbirth").each(function () {
                 dateofbirths.push($(this).val());
             });
-            objects['InsurancePackageId'] = insuranpakge;
+
             objects['Totalprice'] = totalprice;
             var LengthTr = $(".program-selecter").length
             for (var i = 0; i < LengthTr; i++) {
 
                 var item =
                 {
+                    'InsurancePackageId' : insuranpakge,
                     'programname': programnemname[i],
                     'unitprice': prices[i],
                     'DateOfbirth': dateofbirths[i],
@@ -1086,10 +1084,11 @@
                     'Address': address[i],
                     'PhoneNumber': phones[i]
                 };
-                objects.item.push(item)
+
+               
+                objects.items.push(item)
             }
 
-            console.log(programnemname)
             if (typeof (Storage) !== "undefined") {
                 sessionStorage.setItem('medical', JSON.stringify(objects));
 
@@ -1117,30 +1116,30 @@
             var index = $("table tr").length
 
             var html = `<tr id="trid-${index}" class="tr">
-                                                                                                        <td class="align-middle pos-re">
-                                                                                                                <input name="dateofbirth" type="datetime" class="dateofbirth form-control txt birthDay2" onblur="CalPHAPremium();" />
-                                                                                                               </td>
-                                                                                                        <td class="align-middle">
-                                                                                                        <select name="programme" class="custom-select program-selecter form-control" id="program-selecter-${index}"onchange="CalPHAPremium(${index})" >
-                                                                                                        </select>
+                                                                                                            <td class="align-middle pos-re">
+                                                                                                                    <input name="dateofbirth" type="datetime" class="dateofbirth form-control txt birthDay2" onblur="CalPHAPremium();" />
+                                                                                                                   </td>
+                                                                                                            <td class="align-middle">
+                                                                                                            <select name="programme" class="custom-select program-selecter form-control" id="program-selecter-${index}"onchange="CalPHAPremium(${index})" >
+                                                                                                            </select>
+                                                                                                            </td>
+                                                                                                             <td class="align-middle">
+                                                                                                                                            <input type="text" name="Name" class="Name form-control" value="" />
+                                                                                                                                        </td>
+                                                                                                                                        <td class="align-middle">
+                                                                                                                                            <input type="text" name="Email" class="Email form-control" value="" />
+                                                                                                                                        </td>
+                                                                            <td class="align-middle">
+                                                                                                            <input type="text" name="PhoneNumber" class="Address form-control" value="" />
                                                                                                         </td>
-                                                                                                         <td class="align-middle">
-                                                                                                                                        <input type="text" name="Name" class="Name form-control" value="" />
-                                                                                                                                    </td>
-                                                                                                                                    <td class="align-middle">
-                                                                                                                                        <input type="text" name="Email" class="Email form-control" value="" />
-                                                                                                                                    </td>
-                                                                        <td class="align-middle">
-                                                                                                        <input type="text" name="PhoneNumber" class="Address form-control" value="" />
-                                                                                                    </td>
-                                                                                                                                    <td class="align-middle">
-                                                                                                                                        <input type="text" name="PhoneNumber" class="Phone form-control" value="" />
-                                                                                                                                    </td>
-                                                                                                                                    <td class="text-center align-middle">
-                                                                                                                                        <div class="price-pro"><div name="ctl18$rptPHA1$ctl00$txtPremium_" type="text" value="0" id="displayprice-${index}" class="total form-control txt text-right" </div></div>
-                                                                                                                                    </td >
-                                                                                                                                        <td> <button style="color:red ; text-align:center;background: red; border: none;height: 5px; width: 20px;}" onclick="deleted(${index})"></button></td>
-                                                                                                                                       <tr/>`
+                                                                                                                                        <td class="align-middle">
+                                                                                                                                            <input type="text" name="PhoneNumber" class="Phone form-control" value="" />
+                                                                                                                                        </td>
+                                                                                                                                        <td class="text-center align-middle">
+                                                                                                                                            <div class="price-pro"><div name="ctl18$rptPHA1$ctl00$txtPremium_" type="text" value="0" id="displayprice-${index}" class="total form-control txt text-right" </div></div>
+                                                                                                                                        </td >
+                                                                                                                                            <td> <button style="color:red ; text-align:center;background: red; border: none;height: 5px; width: 20px;}" onclick="deleted(${index})"></button></td>
+                                                                                                                                           <tr/>`
             $(".table2").append(html)
 
             getprogramme(index)
