--- a/Project_sem_3/Areas/Admin/Views/Programmes/Deleted.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Programmes/Deleted.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<Project_sem_3.Models.Programme>
+﻿@*@model IEnumerable<Project_sem_3.Models.Programme>*@
+@model PagedList.IPagedList<Project_sem_3.Models.Programme>
+@using PagedList.Mvc
 
 @{
     ViewBag.Title = "Index";
@@ -30,12 +32,35 @@
             <div class="card-body">
                 <div class="table-responsive">
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                        <div class="row"><div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div></div><div class="col-sm-12 col-md-6"><div id="dataTable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="dataTable"></label></div></div></div><div class="row">
+                        <div class="row">
+
+                            <div class="col-sm-12 col-md-6">
+                                <form action="/Admin/Programmes/Deleted/" method="get" id="pagesize">
+                                    <div class="dataTables_length" id="dataTable_length">
+                                        <label>
+                                            Show
+                                            @Html.DropDownList("pageSize", null, new { @class = "custom-select custom-select-sm form-control form-control-sm" })
+                                            entries
+                                        </label>
+                                    </div>
+                                </form>
+                            </div>
+
+                            <div class="col-sm-12 col-md-6">
+                                <form action="/Admin/Programmes/Deleted/" method="get">
+                                    <div id="dataTable_filter" class="dataTables_filter">
+                                        <label>Search:<input type="text" id="SearchString" name="SearchString" class="form-control form-control-sm" placeholder="" aria-controls="dataTable" value="" onkeypress="handle(e)"></label>
+                                    </div>
+                                </form>
+                            </div>
+
+                        </div>
+                        <div class="row">
                             <div class="col-sm-12">
                                 <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
                                     <thead>
                                         <tr>
-                                            <th rowspan="1" colspan="1"><input type="checkbox" id="checkAll_programme" />Select All</th>
+                                            @*<th rowspan="1" colspan="1"><input type="checkbox" id="checkAll_programme" />Select All</th>*@
                                             <th rowspan="1" colspan="1">Name</th>
                                             <th rowspan="1" colspan="1">Price</th>
                                             <th rowspan="1" colspan="1">Status</th>
@@ -47,10 +72,10 @@
                                         @foreach (var item in Model)
                                         {
                                             <tr role="row" class="odd">
-                                                <td>
+                                                @*<td>
                                                     <input type="checkbox" class="check" value="@item.Id" />
                                                     @Html.AntiForgeryToken()
-                                                </td>
+                                                </td>*@
                                                 <td class="sorting_1">
                                                     @item.Name
                                                 </td>
@@ -58,16 +83,31 @@
                                                 <td>@item.Status</td>
 
                                                 <td>
-                                                    <button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
-                                                    <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
-                                                    <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
+                                                    @*<button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
+                                                        <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
+                                                        <button class="btn btn-danger">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>*@
+                                                    <button class="btn btn-success" id="action_return">Return Action</button>
+
                                                 </td>
                                             </tr>
                                         }
                                     </tbody>
                                 </table>
                             </div>
-                        </div><div class="row"><div class="col-sm-12 col-md-5"><div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div></div><div class="col-sm-12 col-md-7"><div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="dataTable_previous"><a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="4" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="5" tabindex="0" class="page-link">5</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="dataTable_next"><a href="#" aria-controls="dataTable" data-dt-idx="7" tabindex="0" class="page-link">Next</a></li></ul></div></div></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 col-md-5">
+                                <div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</div>
+                            </div>
+                            <div class="col-sm-12 col-md-5"></div>
+                            <div class="col-sm-12 col-md-2">
+                                @Html.PagedListPager(Model, page => Url.Action("Deleted", new { page }),
+                               new PagedListRenderOptions()
+                               {
+                                   LiElementClasses = new List<string> { "text-paging" }
+                               })
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -87,7 +127,7 @@
                     $(this).prop('checked'));
             })
 
-            $('#delete_checked').click(function () {
+            $('#action_return').click(function () {
                 var selectedIDs = new Array();
                 $('input:checkbox.check').each(function () {
                     if ($(this).prop('checked')) {
@@ -95,11 +135,11 @@
                     }
                 });
                 if (selectedIDs.length <= 0) {
-                    alert('You have not selected programme !');
+                    alert('You have not selected insurance package !');
                     return;
                 }
                 $.ajax({
-                    url: "/Admin/Programmes/DeleteAll",
+                    url: "/Admin/Programmes/ChangeStatus",
                     type: "POST",
                     dataType: "json",
                     data: {
@@ -108,7 +148,7 @@
                     },
                     success: function (res) {
                         if (!res == false) {
-                            window.location.href = `/Admin/Programmes`;
+                            window.location.reload();
                         }
                     },
                     error: function () {
@@ -117,5 +157,36 @@
                 });
             })
         })
+
+        function handle(e) {
+            if (e.keyCode === 13) {
+                e.preventDefault();
+            }
+        };
+
+        $(function () {
+            $("#pageSize").change(function () {
+                $("#pagesize").submit();
+            });
+        });
     </script>
 }
+
+<style>
+    .text-paging {
+        color: brown;
+    }
+
+        .text-paging > a {
+            color: black;
+        }
+
+    /*.style-sort {
+        background: url(https://cdn2.iconfinder.com/data/icons/music-player-icons-filled/57/Double_Arrows-512.png) no-repeat right .75rem center/9px 16px;
+        background-position: 64px 64px;
+    }*/
+
+    .style-sort > a {
+        color: crimson;
+    }
+</style>
